--- a/frontend/new-project/src/styles/Card.css
+++ b/frontend/new-project/src/styles/Card.css
@@ -1,6 +1,7 @@
 .card-container {
-    width: 14rem;
-    height: 15rem;
+    position: relative;
+    width: 15rem;
+    height: 16rem;
     border-radius: 5px;
     overflow: hidden;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -11,6 +12,64 @@
     height: 100%;
     display: block;
 }
+
+.text-overlay {
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 1rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.text-top-container {
+    display: flex;  
+    margin-left: 6.5rem;
+    margin-top: 0.5rem;
+    align-items: center;  
+    justify-content: start;   
+    background-color: white;
+    width: fit-content;
+    height: auto;
+    width: 7.5rem;
+    border-radius: 15px;
+    font-weight: bold;
+}
+
+.ping {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.ping svg {
+    width: 24px;
+    height: 24px;
+}
+
+.text-top p {
+    margin-top: 10px;
+    font-size: 10px;
+    color: black;
+}
+
+.text-bottom {
+    position: absolute;
+    top: 12.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: orange;
+    width: 12rem;
+    padding: 5px 15px;
+    justify-content: left;
+    border-radius: 5px;
+    color: white;
+}
+
+
 
 
 
