--- a/frontend/new-project/src/styles/DashBoard.css
+++ b/frontend/new-project/src/styles/DashBoard.css
@@ -1,7 +1,31 @@
 .features {
-    display: inline-flex;
-    gap: 16rem;
-    padding: 20px;
-    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between; 
+    gap: 2rem;
+    width: 100%;
+    padding-top: 1rem;
 }
 
+.search-container {
+    width: 35rem;
+}
+
+@media (max-width: 768px) {
+    .features {
+        flex-direction: column; 
+        align-items: center;
+        gap: 1rem;
+    }
+
+    .filter-search-sort {
+        width: 90%;
+        justify-content: space-between;
+    }
+
+    .search-container {
+        order: -1; 
+        width: 90%;
+    }
+}
