--- a/frontend/new-project/src/styles/Navbar.css
+++ b/frontend/new-project/src/styles/Navbar.css
@@ -1,16 +1,19 @@
 .navbar {
     display: inline-flex;
+    justify-content: space-between;
     align-items: center;
     background-color: white;
     color: orange;
     border-bottom: 1px solid rgb(216, 216, 216);
     width: 100%;
-    gap: 10px;
 }
 
 .title {
-    padding-right: 60rem;
+    font-weight: bold;
+    flex-grow: 1;
+    text-align: center;
     font-size: 16px;
+    padding-right: 60rem;
 }
 
 .logo-image {
@@ -18,7 +21,28 @@
     height: 40px;
 }
 
-.app-name {
-    font-size: 16px;
-    font-weight: bold;
+
+@media (max-width: 768px) {
+    .navbar {
+        display: flex;
+        flex-direction: row; 
+        align-items: center;
+        justify-content: space-between; 
+        padding: 1rem;
+        width: 100%;
+    }
+
+    .title {
+        display: none;
+    }
+
+    .logo {
+        display: flex;
+        align-items: center;
+    }
+
+    .logo-image {
+        width: 40px; 
+    }
 }
+
